<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#636363">

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="179dp"
        android:layout_height="33dp"
        android:layout_marginBottom="16dp"
        android:background="#A8A8A8"
        android:hint="jose Luis"
        app:layout_constraintBottom_toTopOf="@+id/txtemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtpass"
        android:layout_width="179dp"
        android:layout_height="33dp"
        android:layout_marginBottom="348dp"
        android:background="#A8A8A8"
        android:hint="**********"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="179dp"
        android:layout_height="33dp"
        android:layout_marginBottom="16dp"
        android:background="#A8A8A8"
        android:hint="example@example.com"
        app:layout_constraintBottom_toTopOf="@+id/txtpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/butnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/txtnombre"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginBottom="348dp"
        android:text="@string/pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtnombre"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_marginBottom="12dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/txtnombre"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>