<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#636363">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="122dp"
        android:layout_height="107dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/leon"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="122dp"
        android:layout_height="107dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/piton"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="107dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/cocodrilos"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="122dp"
        android:layout_height="107dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/elefante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="122dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cebra"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="122dp"
        android:layout_height="107dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/girafa"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/txtcebra"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/txteli"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        app:layout_constraintStart_toEndOf="@+id/txtleon"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/txtleon"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/txtpiton"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="136dp"
        app:layout_constraintStart_toEndOf="@+id/txtjirafa"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/txtjirafa"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/txtcoc"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        app:layout_constraintStart_toEndOf="@+id/txtcebra"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/butcheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/butaciertos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtleon" />

    <Button
        android:id="@+id/butres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/butrespuestas"
        app:layout_constraintStart_toEndOf="@+id/butcheck"
        app:layout_constraintTop_toBottomOf="@+id/txtleon" />

    <Button
        android:id="@+id/butclean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="32dp"
        android:text="@string/butclean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/butres"
        app:layout_constraintTop_toBottomOf="@+id/txteli" />

    <TextView
        android:id="@+id/txtcont"
        android:layout_width="88dp"
        android:layout_height="75dp"
        android:background="#858383"
        android:gravity="center"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/butres"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>